# iot_simulator

./: README.md
consumer_src/: Dockerfile
deployment/: kafka_service.yaml  kafka_statefulset.yaml  zookeeper_service.yaml  zookeeper_statefulset.yaml
deployment/configmap/: acc_configmap.yaml  aq_configmap.yaml  humidity_configmap.yaml  light_configmap.yaml  microphone_configmap.yaml  soil_moisture_configmap.yaml  temp_configmap.yaml
deployment/consumer/: accelerometer_consumer.yaml  air_quality_consumer.yaml  humidity_consumer.yaml  light_consumer.yaml  microphone_consumer.yaml  soil_moisture_consumer.yaml  temp_consumer.yaml
deployment/producer/: accelerometer_producer.yaml  air_quality_producer.yaml  humidity_producer.yaml  light_producer.yaml  microphone_producer.yaml  soil_moisture_producer.yaml  temp_producer.yaml
sensor_src/: Cargo.toml  Dockerfile  README.md
sensor_src/src/: main.rs  sensor.rs  simulate.rs  stream.rs
sensors_config/: accelerometer.yaml  air_quality.yaml  humidity.yaml  light.yaml  microphone.yaml  soil_moisture.yaml  temperature.yaml
